// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`task row renders task row 1`] = `
<a
  className="container selected highPriority compressed"
  href="/foo/bar/task-id?"
  onClick={[Function]}
>
  <div
    className="flexRow"
  >
    <div
      className="circleSvg male patientImage"
    />
    <div>
      <p
        className="text gray patientName"
      >
        Bob Smith
      </p>
      <div
        className="title"
      >
        Task Title
      </div>
    </div>
  </div>
  <div
    className="meta"
  >
    <div
      className="followers"
    />
    <div
      className="dateSection openedAt openedAtSection"
    >
      <span
        className="dateLabel"
      >
        Opened
        :
      </span>
      <span
        className="dateValue"
      >
        in 2 months
      </span>
    </div>
    <div
      className="dateSection"
    >
      <span
        className="dateLabel"
      >
        Due
        :
      </span>
      <span
        className="dateValue"
      >
        Sep 7, 2017
      </span>
    </div>
  </div>
</a>
`;

exports[`task row renders task row with multiple followers 1`] = `
<a
  className="container selected highPriority compressed"
  href="/foo/bar/task-id?"
  onClick={[Function]}
>
  <div
    className="flexRow"
  >
    <div
      className="circleSvg male patientImage"
    />
    <div>
      <p
        className="text gray patientName"
      >
        Bob Smith
      </p>
      <div
        className="title"
      >
        Task Title
      </div>
    </div>
  </div>
  <div
    className="meta"
  >
    <div
      className="followers"
    >
      <div
        className="follower"
      >
        +2
      </div>
    </div>
    <div
      className="dateSection openedAt openedAtSection"
    >
      <span
        className="dateLabel"
      >
        Opened
        :
      </span>
      <span
        className="dateValue"
      >
        in 2 months
      </span>
    </div>
    <div
      className="dateSection"
    >
      <span
        className="dateLabel"
      >
        Due
        :
      </span>
      <span
        className="dateValue"
      >
        Sep 7, 2017
      </span>
    </div>
  </div>
</a>
`;
